deployment/prd/regnerdetnu/templates/deployment.web.yaml
---
# Source: regnerdetnu/templates/deployment.web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prd-regnerdetnu-web-deployment
  namespace: regnerdetnuprd
  labels:
    environment: prd
    version: 1.0.13
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prd-regnerdetnu-web-app
      version: 1.0.13
  template:
    metadata:
      labels:
        app: prd-regnerdetnu-web-app
        version: 1.0.13
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: ""
      serviceAccountName: regnerdetnu-web-sa
      imagePullSecrets:
      - name: acr-pull
      containers:
      - name: regnerdetnu-web-pod
        image: tgclzdevacr.azurecr.io/tgc-regnerdetnu-app:1.0.13
        ports:
        - containerPort: 80
