deployment/prd/regnerdetnu/templates/service.api.yaml
---
# Source: regnerdetnu/templates/service.api.yaml
apiVersion: v1
kind: Service
metadata:
  name: prd-regnerdetnu-api-svc
  namespace: regnerdetnuprd
  labels:
    environment: prd
    version: 1.0.12
spec:
  selector:
    app: prd-regnerdetnu-api-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
