deployment/prd/regnerdetnu/templates/service.web.yaml
---
# Source: regnerdetnu/templates/service.web.yaml
apiVersion: v1
kind: Service
metadata:
  name: prd-regnerdetnu-web-svc
  namespace: regnerdetnuprd
  labels:
    environment: prd
    version: 1.0.14
spec:
  selector:
    app: prd-regnerdetnu-web-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
