deployment/prd/regnerdetnu/templates/httproute.web.yaml
---
# Source: regnerdetnu/templates/httproute.web.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prd-regnerdetnu-web-httproute
  namespace: regnerdetnuprd
  labels:
    environment: prd
    version: 1.0.15
spec:
  parentRefs:
    - name: gateway
      namespace: gatewayapi
      sectionName: prd-regnerdet-nu-https
  hostnames:
    - regnerdet.nu
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: prd-regnerdetnu-web-svc
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
